force-app/main/default/objects/conference360__FAQ_Question__c/conference360__FAQ_Question__c.object-meta.xml
<CustomObject>
    <label>FAQ Question</label>
    <nameField>
        <displayFormat>FAQQ-{000000}</displayFormat>
        <label>FAQ Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQ Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>