force-app/main/default/objects/conference360__FAQ_Question__c/fields/conference360__Answer__c.field-meta.xml
<CustomField>
    <fullName>conference360__Answer__c</fullName>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>