force-app/main/default/objects/conference360__FAQ_Question__c/fields/conference360__FAQ_Category__c.field-meta.xml
<CustomField>
    <fullName>conference360__FAQ_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FAQ Category</label>
    <referenceTo>conference360__FAQ_Category__c</referenceTo>
    <relationshipLabel>FAQ Questions</relationshipLabel>
    <relationshipName>FAQ_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>