force-app/main/default/objects/conference360__FAQ_Question__c/fields/conference360__Question__c.field-meta.xml
<CustomField>
    <fullName>conference360__Question__c</fullName>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>