force-app/main/default/objects/conference360__FAQ_Question__c/fields/conference360__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sort_Order__c</fullName>
    <description>The order this Question should be placed in.</description>
    <inlineHelpText>The order this Question should be placed in.</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>