force-app/main/default/objects/conference360__FAQ_Question__c/listViews/conference360__All.listView-meta.xml
<ListView>
    <fullName>conference360__All</fullName>
    <columns>NAME</columns>
    <columns>conference360__Answer__c</columns>
    <columns>conference360__FAQ_Category__c</columns>
    <columns>conference360__Question__c</columns>
    <columns>conference360__Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>